Made column wider to prevent overlap with board.

--- a/static/board.css
+++ b/static/board.css
@@ -59,7 +59,6 @@ button.startbutton{
 // }
 
 .column{
-    padding-left: 15px;
     float: left;
-    width: 33.33%;
+    width: 40%;
 }
